# ARdrone_ROS

./: README.md  contributors.txt
ar_pose_example/: CMakeLists.txt  package.xml
gazebo_example/: CMakeLists.txt  package.xml
gazebo_example/Launch/: gazebo_example_launch.launch  gazebo_example_spawn.launch  gazebo_example_world.launch
gazebo_example/Worlds/: gazebo_example_world.world
gazebo_example_my/: CMakeLists.txt  package.xml
gazebo_example_my/Launch/: gazebo_example_control.launch
gazebo_example_my/URDF/: gazebo_example_robot.urdf
gazebo_example_my/params/: ctrl_params.yaml
introRos2016_Dcoll_Marbones/: CMakeList.txt  package.xml  package.xml~
intro_ros_final_project/ardrone_sim/launch/: ardrone_sim.launch
intro_ros_final_project/intro_ros_final_project/: CMakeLists.txt  package.xml
intro_ros_final_project/simple_node/: CMakeLists.txt  package.xml
intro_ros_final_project/simple_node/cfg/: dynparams.cfg
intro_ros_final_project/simple_node/launch/: ar_marker1.launch  ar_marker2.launch  controller_launch.launch
intro_ros_final_project/simple_node/src/: Controller_node.cpp  Controller_node_marc.cpp  Controller_node_marc_simulation.cpp  bot_cam_trans_pub.cp  controller.cpp  main_node.cpp  pub_land.cpp  pub_takeoff.cpp  simple_publisher.cpp
intro_services_example/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
intro_services_example/src/: client_node.cpp  server_node.cpp
intros_action_example/: CMakeLists.txt  package.xml
intros_action_example/launch/: action_intro.launch
intros_action_example/src/: client_node.cpp  server_node.cpp
intros_msgs_example/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
launcher_ar_pose/: CMakeLists.txt  package.xml
launcher_ar_pose/launch/: launcher_ar_pose.launch
my_node/: CMakeLists.txt  CMakeLists.txt~  package.xml
my_node/cfg/: my_nodeparams.cfg
my_node/src/: my_node.cpp
usb_cam_example/: CMakeLists.txt  package.xml
usb_cam_example/launch/: usb_cam.launch  usb_cam.launch~  usb_cam.yaml
