<?xml version="1.0"?>
<package>
  <name>introRos2016_Dcoll_Marbones</name>
  <version>0.0.0</version>
  <description>introRos2016_Dcoll_Marbones metapackage</description>
  <maintainer email="user_name@todo.todo">username</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export><metapackage /> </export>
</package>


